# libmagicxx

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Doxyfile  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_PROCEDURE.md  SECURITY.md  STYLE_GUIDE.md  TODO.md  build.sh  commit_release.sh  generate_documentation.sh  install_dependencies.sh  setup.sh
doc/: CMakeLists.txt
doc/html/: CHANGELOG_8md.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  README_8md.html  SECURITY_8md.html  TODO_8md.html  annotated.html  classes.html  classrecognition_1_1empty__path-members.html  classrecognition_1_1empty__path.html  classrecognition_1_1empty__path.js  classrecognition_1_1empty__path__coll__graph.dot  classrecognition_1_1empty__path__inherit__graph.map  classrecognition_1_1empty__path__inherit__graph.md5  classrecognition_1_1invalid__path-members.html  classrecognition_1_1invalid__path.html  classrecognition_1_1invalid__path.js  classrecognition_1_1invalid__path__coll__graph.dot  classrecognition_1_1invalid__path__coll__graph.map  classrecognition_1_1invalid__path__inherit__graph.map  classrecognition_1_1invalid__path__inherit__graph.md5  classrecognition_1_1magic-members.html  classrecognition_1_1magic.html  classrecognition_1_1magic.js  classrecognition_1_1magic_1_1magic__private-members.html  classrecognition_1_1magic_1_1magic__private.html  classrecognition_1_1magic_1_1magic__private.js  classrecognition_1_1magic__exception-members.html  classrecognition_1_1magic__exception.html  classrecognition_1_1magic__exception.js  classrecognition_1_1magic__exception__coll__graph.dot  classrecognition_1_1magic__exception__coll__graph.map  classrecognition_1_1magic__exception__coll__graph.md5  classrecognition_1_1magic__exception__inherit__graph.dot  classrecognition_1_1magic__exception__inherit__graph.map  classrecognition_1_1magic__file__error-members.html  classrecognition_1_1magic__file__error.html  classrecognition_1_1magic__file__error.js  classrecognition_1_1magic__file__error__coll__graph.map  classrecognition_1_1magic__file__error__inherit__graph.dot  (+161 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  defines_0.js  defines_1.js  (+44 more)
doc/man/man3/: CHANGELOG.md.3  CODE_OF_CONDUCT.md.3  CONTRIBUTING.md.3  README.md.3  SECURITY.md.3  TODO.md.3  _home_oguz_.oguz_Projects_libmagicxx_file_.3  _home_oguz_.oguz_Projects_libmagicxx_file_src_.3  _home_oguz_.oguz_Projects_libmagicxx_inc_.3  _home_oguz_.oguz_Projects_libmagicxx_src_.3  _home_runner_work_libmagicxx_libmagicxx_inc_.3  _libmagicxx_external_.3  _libmagicxx_external_file_.3  _libmagicxx_external_file_src_.3  _libmagicxx_file_.3  _libmagicxx_file_src_.3  _libmagicxx_inc_.3  _libmagicxx_src_.3  file_concepts.3  file_concepts.hpp.3  file_concepts_file_container.3  magic.cpp.3  magic.h.3  magic.hpp.3  magic_exception.hpp.3  md_SECURITY.3  (+23 more)
documentation/: 404.html  CMakeLists.txt  README.txt
documentation/html/: CHANGELOG_8md.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  README_8md.html  SECURITY_8md.html  annotated.html  annotated_dup.js  classes.html  classrecognition_1_1empty__path-members.html  classrecognition_1_1empty__path.html  classrecognition_1_1empty__path__inherit__graph.map  classrecognition_1_1empty__path__inherit__graph.md5  classrecognition_1_1filesystem__error-members.html  classrecognition_1_1filesystem__error.html  classrecognition_1_1filesystem__error.js  classrecognition_1_1filesystem__error__coll__graph.md5  classrecognition_1_1filesystem__error__inherit__graph.map  classrecognition_1_1invalid__path-members.html  classrecognition_1_1invalid__path.html  classrecognition_1_1magic-members.html  classrecognition_1_1magic.html  classrecognition_1_1magic.js  classrecognition_1_1magic_1_1magic__private-members.html  classrecognition_1_1magic_1_1magic__private.html  classrecognition_1_1magic_1_1magic__private.js  classrecognition_1_1magic__database__not__loaded-members.html  classrecognition_1_1magic__database__not__loaded.html  classrecognition_1_1magic__database__not__loaded.js  classrecognition_1_1magic__database__not__loaded__coll__graph.map  classrecognition_1_1magic__database__not__loaded__coll__graph.md5  classrecognition_1_1magic__exception-members.html  classrecognition_1_1magic__exception.html  classrecognition_1_1magic__exception.js  classrecognition_1_1magic__exception__coll__graph.map  classrecognition_1_1magic__exception__inherit__graph.map  classrecognition_1_1magic__exception__inherit__graph.md5  classrecognition_1_1magic__file__error-members.html  classrecognition_1_1magic__file__error.html  classrecognition_1_1magic__file__error__inherit__graph.md5  classrecognition_1_1magic__identify__file__error-members.html  (+221 more)
examples/: CMakeLists.txt  magic_examples.cpp
test/: CMakeLists.txt  magic_check_test.cpp  magic_compile_test.cpp  magic_file_concepts_test.cpp  magic_flags_test.cpp  magic_identify_file_test.cpp  magic_load_database_file_test.cpp  magic_open_close_test.cpp  magic_parameters_test.cpp  magic_special_members_test.cpp  magic_version_test.cpp
tests/: CMakeLists.txt  magic_check_test.cpp  magic_compile_test.cpp  magic_file_concepts_test.cpp  magic_flags_mask_test.cpp  magic_flags_test.cpp  magic_identify_container_test.cpp  magic_identify_directory_test.cpp  magic_identify_file_test.cpp  magic_identify_files_test.cpp  magic_load_database_file_test.cpp  magic_open_close_test.cpp  magic_parameters_test.cpp  magic_percentage_test.cpp  magic_progress_tracker_test.cpp  magic_special_members_test.cpp  magic_to_string_test.cpp  magic_version_test.cpp  main.cpp
(+190 files in other folders)
